--- a/style.css
+++ b/style.css
@@ -4,4 +4,21 @@
 }
 body{
     overflow: hidden;
+    background: black;
+}
+h1{
+    color: white;
+    font-size: 4rem;
+    position: absolute;
+    
+}
+
+#score-player1{
+    bottom: 100px;
+    left: 800px;
+}
+
+#score-player2{
+    top: 100px;
+    left: 800px;
 }
